# FreeCodeCamp_Courses

./: LICENSE  README.md
C++_Programming_Course/: README.md
Flask_Course_Web_Aplication/: pyproject.toml
Flask_Course_Web_Aplication/flask_course_web_aplication/Flask_Market/: market.py
Flask_Course_Web_Aplication/flask_course_web_aplication/Flask_Market/templates/: base.html  home.html  index.html  market.html
Flask_Course_Web_Aplication/flask_course_web_application/Flask_Market/: market.py
Flask_Course_Web_Application/: .gitignore  README.md  pyproject.toml
Flask_Course_Web_Application/flask_course_web_application/Flask_Market/: run.py
Flask_Course_Web_Application/flask_course_web_application/Flask_Market/market/: __init__.py  forms.py  models.py  routes.py
Flask_Course_Web_Application/flask_course_web_application/Flask_Market/market/templates/: base.html  home.html  login.html  market.html  register.html
Flask_Course_Web_Application/flask_course_web_application/Flask_Market/market/templates/includes/: items_modal.html  owned_items_modal.html
Learn_GO_Programming/: README.md  go.mod
Learn_GO_Programming/content/: variables.go
Mojo_Programming_Language_For_Beginners/: .gitignore  README.md
Mojo_Programming_Language_For_Beginners/conteudos/: hello_world.mojo  variables.mojo
Scrapy_Course_Python_Web_Scraping/: README.md  pyproject.toml
Scrapy_Course_Python_Web_Scraping/bookscrapper/: output.json  scrapy.cfg
Scrapy_Course_Python_Web_Scraping/bookscrapper/bookscrapper/: items.py  middlewares.py  pipelines.py  settings.py
Scrapy_Course_Python_Web_Scraping/bookscrapper/bookscrapper/spiders/: bookspider.py
