[tool.poetry]
name = "flask-course-web-application"
version = "0.1.0"
description = ""
authors = ["Lyarkh <lcemanuel.emanuel@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_course_web_aplication"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flask-wtf = "^1.0.1"
wtforms = "^3.0.1"
email-validator = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
